--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://mateuszmeteo.github.io/bookmark",
   "dependencies": {
     "browser-router": "^0.2.0",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
