--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "homepage": "https://mateuszmeteo.github.io/bookmark",
   "dependencies": {
-    "browser-router": "^0.2.0",
-    "gh-pages": "^6.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0",
+    "browser-router": "0.2.0",
+    "formik": "2.4.5",
+    "gh-pages": "6.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-media": "1.10.0",
+    "react-modal": "3.16.1",
+    "react-router-dom": "6.21.0",
     "react-scripts": "5.0.1",
-    "react-svg": "^16.1.32",
-    "sass": "^1.69.5",
-    "web-vitals": "^2.1.4"
+    "react-svg": "16.1.32",
+    "sass": "1.69.5",
+    "styled-components": "6.1.1",
+    "web-vitals": "2.1.4",
+    "yup": "1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
